tests/ui/opts/18_param_lifetime.rs
use funcmap::FuncMap;

#[derive(FuncMap)]
#[funcmap(params('a))]
struct Test<'a, T>(&'a (), T);

fn main() {}
